--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <div class="flex-grow">
                             <h3 class="font-bold text-lg text-gray-900">PNUT
                                 <!-- -->(
-                                <!-- -->PNUT
+                                <!-- -->PNUT/sol
                                 <!-- -->)</h3>
                             <p class="text-sm text-gray-600">MCAP:
                                 <!-- -->$647,750,380</p>
